Added ChatBox Left-Sidebar Section

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@
 .input-style{
     @apply py-[8px] px-[10px] border border-[#c9c9c9] rounded-[4px]  outline-[#077eff];
 }
+
+::-webkit-scrollbar{
+    display:none;
+}
